# openCLneural

./: .gitignore  CMakeLists.txt  main.cpp  temp  vcpkg.json
inc/: Layer.h  NeuralNetwork.h  Neuron.h  input_parse.h
src/: FeedForward.cpp  InitKernel.cl  NeuralNetwork.cpp  NeuralNetworkKernel.cl  backPropagation.cpp  backPropagationKernel.cl  drawing_data.txt  feedForward.cpp  input_parse.cpp  kernelFn.cl
